[cs-grid] - Change input search to CSInputSearch and fix text cutting off in table header cells

--- a/cs-grid/src/sass/_quick-filter.scss
+++ b/cs-grid/src/sass/_quick-filter.scss
@@ -3,62 +3,6 @@
 
 	.cs-grid_quick-filter {
 		position: relative;
-
-		.cs-grid_search-icon {
-			left: 0.75rem;
-			bottom: 50%;
-			position: absolute;
-			transform: translateY(50%);
-			@include css4 {
-				fill: cvar(--csgrid-input-icon-fill);
-			}
-		}
-
-		.cs-grid_quick-filter-input {
-			width: 100%;
-			padding: 0 1rem 0 2rem !important;
-			border-radius: 0.25rem;
-			display: inline-block;
-			font-size: 0.75rem;
-			line-height: 1.875rem;
-			@include sbg(--csgrid-input-bg);
-			@include css4 {
-				border: 1px solid cvar(--csgrid-input-br);
-			}
-
-			&:active,
-			&:focus {
-				outline: none;
-				@include css4 {
-					border-color: cvar(--csgrid-input-active-br);
-					box-shadow: 0 0 3px cvar(--csgrid-input-box);
-				}
-			}
-		}
-	}
-
-	.cs-grid_quick-filter-search {
-		display: flex;
-		padding: 0;
-		margin: 0;
-
-		div {
-			border-radius: 0.25rem;
-			margin-left: 0.5rem;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			width: 4rem;
-			height: 2rem;
-			padding: 0;
-			font-size: 0.75rem;
-			text-decoration: none;
-			cursor: pointer;
-			@include sbg(--csgrid-pagination-bg);
-			@include sc(--csgrid-pagination-c);
-			@include css4 {
-				border: 1px solid cvar(--csgrid-pagination-br);
-			}
-		}
+		padding-block-end: 1.5rem;
 	}
 }
