--- a/cs-grid/src/sass/style.scss
+++ b/cs-grid/src/sass/style.scss
@@ -75,6 +75,7 @@
 								overflow: hidden;
 								text-overflow: ellipsis;
 								white-space: nowrap;
+								line-height: normal;
 								width: 100%;
 								margin: 0;
 								padding-right: 0.5rem;
